<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>vn.com.demo</groupId>
	<artifactId>common-search</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>common-search</name>
	<description>common-search</description>
	<packaging>pom</packaging>

	<modules>
		<module>rest-base-search-and-pagination</module>
		<module>graphQL</module>
	</modules>

	<properties>
		<java.version>17</java.version>
		<lombok.version>1.18.36</lombok.version>
	</properties>

</project>
